// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > renders correctly with current page prop 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR hbiRtX sc-jwTyAe dOPolu"
    >
      <button
        aria-label="previous-page"
        class="sc-jJLAfE cFYRTO"
      >
        <span
          class="sc-bRKDuR bHjpxP sc-fhHczv lfpoiQ"
          color="liquorice"
          data-testid="arrow-container"
          rotate="0"
          size="18"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.087 12.401c.014.033.042.058.06.089a.99.99 0 00.177.238c.008.007.01.018.018.025l8 7a1 1 0 101.316-1.505L5.661 13H21a1 1 0 100-2H5.661l5.997-5.248a1 1 0 10-1.316-1.504l-8 7c-.008.007-.011.018-.018.025a.99.99 0 00-.177.238c-.018.031-.045.056-.06.089a.97.97 0 000 .801z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          1
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          2
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          3
        </p>
      </button>
      <button
        class="sc-hjsuWn joHega"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ fvPyJk"
          cursor="inherit"
          title=""
        >
          4
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          5
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          ...
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          12
        </p>
      </button>
      <button
        aria-label="next-page"
        class="sc-jJLAfE cFYRTO"
      >
        <span
          class="sc-bRKDuR bHjpxP sc-fhHczv hoLKYB"
          color="liquorice"
          data-testid="arrow-container"
          rotate="180"
          size="18"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.087 12.401c.014.033.042.058.06.089a.99.99 0 00.177.238c.008.007.01.018.018.025l8 7a1 1 0 101.316-1.505L5.661 13H21a1 1 0 100-2H5.661l5.997-5.248a1 1 0 10-1.316-1.504l-8 7c-.008.007-.011.018-.018.025a.99.99 0 00-.177.238c-.018.031-.045.056-.06.089a.97.97 0 000 .801z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Pagination > renders correctly with default props 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR hbiRtX sc-jwTyAe dOPolu"
    >
      <button
        class="sc-hjsuWn joHega"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ fvPyJk"
          cursor="inherit"
          title=""
        >
          1
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          2
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          3
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          4
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          5
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          ...
        </p>
      </button>
      <button
        class="sc-hjsuWn kPWbTG"
      >
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          12
        </p>
      </button>
      <button
        aria-label="next-page"
        class="sc-jJLAfE cFYRTO"
      >
        <span
          class="sc-bRKDuR bHjpxP sc-fhHczv hoLKYB"
          color="liquorice"
          data-testid="arrow-container"
          rotate="180"
          size="18"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.087 12.401c.014.033.042.058.06.089a.99.99 0 00.177.238c.008.007.01.018.018.025l8 7a1 1 0 101.316-1.505L5.661 13H21a1 1 0 100-2H5.661l5.997-5.248a1 1 0 10-1.316-1.504l-8 7c-.008.007-.011.018-.018.025a.99.99 0 00-.177.238c-.018.031-.045.056-.06.089a.97.97 0 000 .801z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</body>
`;
